# dd-log-alanyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.watcher  README.md  pyproject.toml  sentry-functionalities.txt
.github/workflows/: docker-build.yml
config/: default.yaml
demo/: index.html  presentation.html
deploy/docker/: .env.example  docker-compose.yml  nginx.conf
deploy/helm/dd-log-analyzer/: Chart.yaml  values.yaml
deploy/helm/dd-log-analyzer/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml  watcher-deployment.yaml
infra/: dynamodb.tf  eventbridge.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
scripts/: deploy.sh  destroy.sh  package.sh
src/dd_log_analyzer/: __init__.py  cache.py  cli.py  client.py  config.py  config_aws.py  lambda_handler.py
src/dd_log_analyzer/analysis/: ai_describer.py  anomalies.py  engine.py  errors.py  patterns.py  trends.py
src/dd_log_analyzer/models/: log_entry.py
src/dd_log_analyzer/notifications/: alert_state.py  dynamo_alert_state.py  jira.py  slack.py
src/dd_log_analyzer/query/: engine.py
src/dd_log_analyzer/reporting/: console.py  html_report.py  json_report.py  s3_report.py
src/dd_log_analyzer/webapp/: auth.py  db.py  run.py  server.py
tests/: conftest.py  test_analysis.py
webapp/frontend/: index.html  package-lock.json  package.json
webapp/frontend/src/: api.js  main.js
(+6 files in other folders)
